syntax = "proto3";

package user;

option go_package = "/user-proto";

service UserService {
    rpc CreateUser(User) returns(User);
    rpc GetUser(GetUserReq) returns(User);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    rpc UpdateUser(UpdateUserReq) returns(UpdateUserRes);
    rpc DeleteUser(DeleteUserReq) returns(DeleteUserRes);
}

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string created_at = 5;
    string updated_at = 6;
    string deleted_at = 7;
    string first_name = 8;
    string last_name = 9;
    string bio = 10;
    string website = 11;
}

message ListUsersRequest {
    int64 page = 1;
    int64 limit = 2;
}

message ListUsersResponse {
    repeated User users = 1;
}

message UpdateUserReq {
    string email = 1;
}

message UpdateUserRes {
    bool success = 1;
}

message GetUserReq {
    string email = 1;
}

message DeleteUserReq {
    string email = 1;
}

message DeleteUserRes {
    bool success = 1;
}

message CreateUserRequest {
    string id = 1;
    string fullname = 2;
    string username = 3;
    string email = 4;
    string password = 5;
    string refresh_token = 6;
}

message CreateUserResponse {
    string id = 1;
    string fullname = 2;
    string username = 3;
    string email = 4;
    string password = 5;
    string refresh_token = 6;
}

message GetUserRequest {
    string user_id = 1;
}